--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-picture-o fa-2x"></i>
+                                <i class="fa fa-object-group fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Design</h5>
                             <p>Create stunning, user-friendly websites with responsive layouts that enhance brand identity and user experience.</p>
@@ -181,7 +181,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-buysellads fa-2x"></i>
+                                <i class="fa fa-google fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Pay-Per-Click (PPC) Management</h5>
                             <p>Drive targeted traffic and maximize ROI with expert PPC campaign management across platforms like Google Ads and Bing Ads.</p>
@@ -191,7 +191,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-wordpress fa-2x"></i>
+                                <i class="fa fa-laptop></i>
                             </div>
                             <h5 class="mb-3">WordPress Solutions</h5>
                             <p>Design, customize, and maintain secure, fast, and user-friendly WordPress websites tailored to your business.</p>
