--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-home fa-2x"></i>
+                                <i class="fa fa-bullhorn fa-2x"></i>
                             </div>
                             <h5 class="mb-3">SEO</h5>
                             <p>Boost your site's visibility and rankings with ethical SEO strategies for organic growth and improved user engagement.</p>
@@ -161,7 +161,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-home fa-2x"></i>
+                                <i class="fa fa-object-group fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Design</h5>
                             <p>Create stunning, user-friendly websites with responsive layouts that enhance brand identity and user experience.</p>
@@ -171,7 +171,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-home fa-2x"></i>
+                                <i class="fa fa-code fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Development</h5>
                             <p>Develop fast, secure, and scalable websites tailored to your needs, ensuring optimal performance across all devices.</p>
@@ -181,7 +181,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-home fa-2x"></i>
+                                <i class="fa fa-google fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Pay-Per-Click (PPC) Management</h5>
                             <p>Drive targeted traffic and maximize ROI with expert PPC campaign management across platforms like Google Ads and Bing Ads.</p>
@@ -191,7 +191,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-home fa-2x"></i>
+                                <i class="fa fa-laptop fa-2x"></i>
                             </div>
                             <h5 class="mb-3">WordPress Solutions</h5>
                             <p>Design, customize, and maintain secure, fast, and user-friendly WordPress websites tailored to your business.</p>
@@ -201,7 +201,7 @@
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-home fa-2x"></i>
+                                <i class="fa fa-server fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Hosting Solutions</h5>
                             <p>Ensure your website's performance with fast, secure, and scalable hosting services, including shared, VPS, and dedicated servers.</p>
