--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="" alt="">
+    <img src="Coinbase-logo-final.png" alt="adsfd">
 </body>
 </html>
